Finalisation desktop_menu, intégration tablette_menu, ajout box-shadow et bordure de titre, correction html

--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -46,6 +46,7 @@ body {
       color: #3b3a3b;
       font-weight: 500;
       background-color: #ededed;
+      box-shadow: inset 1px 16px 29px -15px rgba(161,161,161,1);
   }
 
   #localisation i{
@@ -80,7 +81,7 @@ body {
     font-size: 20px;
 background: linear-gradient(#FF79DA,#9356DC);
 border: 0px;
-box-shadow: 64px 67px 70px -32px rgba(41,41,41,0.78); /* Vérifier */
+box-shadow: 64px 67px 70px -32px rgba(41,41,41,0.78);
 }
 
 /* Section 2 : Fonctionnement */
@@ -97,7 +98,7 @@ h2 {
     display: flex;
     border: 1px solid #f7f7f7;
     border-radius: 20px;
-    box-shadow: 64px 67px 70px -32px rgba(41,41,41,0.78); /* à vérifier */
+    box-shadow: 10px 10px 29px 0px rgba(176,176,176,1);
     background-color: #f7f7f7;
     font-size: 20px;
     font-weight: 500;
@@ -155,6 +156,7 @@ h2 {
     background-color: #ffff;
     text-decoration: none;
     color: black;
+    box-shadow: 1px 16px 29px -1px rgba(199,199,199,1);
 }
 
 /* Image */
